cluster/apps/services/paperless/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      enableServiceLinks: false
      containers:
        - name: webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          imagePullPolicy: IfNotPresent
          command: ["/sbin/docker-entrypoint.sh"]
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
            - name: paperless-media
              mountPath: /usr/src/paperless/media
            - name: paperless-media
              mountPath: /usr/src/paperless/consume
            - name: paperless-media
              mountPath: /usr/src/paperless/export
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
