cluster/apps/services/paperless/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: traefik-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  name: paperless-ingress
  namespace: paperless
spec:
  rules:
    - host: paperless.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000   
  tls:
    - hosts:
        - paperless.amrap030.home
      secretName: paperless-cert
